reconfiguring routes and adding header

--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -33,8 +33,9 @@
 
   <div class="field">
     <%= f.label :user_id %>
-    <%= f.number_field :user_id %>
+    <%= f.collection_select(:user_id, User.all, :id, :email) %>
   </div>
+
 
   <div class="actions">
     <%= f.submit %>
